v1.7.1 -
* fixed issue with new modeExcludeNewPlayerSpawn not being usable

v1.7 - Aug 25, 2012
* database upgrade: HSP will upgrade automatically, but to be safe you should backup your database before upgrading!
* new strategies: SpawnLastLocation and SpawnLocalPlayerSpawn
* new modes: ModeRememberSpawn and ModeRememberLocation
* new WorldGuard mode: modeInRegion
* Extensive direct Multiverse integration with many new modes and events
* See http://dev.bukkit.org/server-mods/homespawnplus/pages/examples/example07/ for example of new modes in action
* New command system which allows HSP to map commands dynamically at runtime
* New command system also finally fully enables "disabledCommands" feature so you can completely disable commands you don't want to use
* Custom event commands (uses new command system)
* Implemented new events "onRegionEnter" and "onRegionExit"
* added "onNewPlayer" event for new players. If no result is returned, HSP will fall through to "onJoin" which maintains backwards compatibility
* added Spanish locale (thanks Consalvo!)
* Ticket #123: added modeExcludeNewPlayerSpawn 
* Ticket #125: fix for Essentials conversion

v1.6.3 - Aug 22, 2012
* some performance tuning
* added built-in performance monitoring, tunable via core.warnPerformanceMillis config option
* added Brazilian Portuguese translation (locale pt-br). Thanks Guichaguri!
* changed core.reloadChunkOnTeleport default to false (fixes https://bukkit.atlassian.net/browse/BUKKIT-2275)
* Ticket #131: modeRequiresBed not working

v1.6.2 - Aug 2, 2012
* Ticket #118: error when using spawnWorldRandom strategy
* cleaned up some spurious warning messages related to some missing default config settings
* added "core.bedHomeOverwritesDefault" flag for determining how bed home vs default home (/sethome) interact (default = true)
* fixed spurious "location is different than where HSP sent player" messages
* validated working with Craftbukkit 1.3.1 dev builds

v1.6.1 - Jul 8, 2012