@@ -1,5 +1,8 @@
 v1.7.1 -
 * fixed issue with new modeExcludeNewPlayerSpawn not being usable
+* fixed issue with command usurping and CommandBook
+* made onRegionEnter/Exit pick up world context automatically for world-specific rules
+* additions to spawnLastLocation strategy to allow it to respond better to custom events
 
 v1.7 - Aug 25, 2012
 * database upgrade: HSP will upgrade automatically, but to be safe you should backup your database before upgrading!
